started news api integration